--- a/wp-content/themes/filter-demo/css/scss/_global.scss
+++ b/wp-content/themes/filter-demo/css/scss/_global.scss
@@ -1,116 +1,57 @@
-* { box-sizing: border-box; }
-
 body {
-  font-family: sans-serif;
+	font-family: "helvetica";
+	
 }
 
-/* ---- button ---- */
 
-.button {
-  display: inline-block;
-  padding: 0.5em 1.0em;
-  background: #EEE;
-  border: none;
-  border-radius: 7px;
-  background-image: linear-gradient( to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2) );
-  color: #222;
-  font-family: sans-serif;
-  font-size: 16px;
-  text-shadow: 0 1px white;
-  cursor: pointer;
+.container {
+	width:100%;
+	max-width:700px;
+	margin:50px auto;
+	padding:0 4px;
 }
 
-.button:hover {
-  background-color: #8CF;
-  text-shadow: 0 1px hsla(0, 0%, 100%, 0.5);
-  color: #222;
+
+.button_wrapper {
+	text-align: left;
+	margin-bottom: 35px;
+	button {
+		background:#000;
+		color:#fff;
+		border:none;
+		text-transform: uppercase;
+		font-weight: bold;
+		font-size: 14px;
+		padding:8px 20px;
+		margin-bottom: 4px;
+		transition: all .2s ease-in-out;
+		cursor: pointer;
+		&:hover {
+			background:#ed1d24;
+		}
+	}
+	button.active {
+		background:#ed1d24;
+	}
 }
 
-.button:active,
-.button.is-checked {
-  background-color: #28F;
+
+
+.box {
+	margin-bottom:25px;
+	line-height: 22px;
+	img {
+		display: block;
+		margin-top:20px;
+		margin-bottom:30px;
+		max-width:100%;
+		height:auto;
+	}
+	h2 {
+		margin-bottom:9px;
+		font-size:20px;
+	}
+	p {
+		margin-bottom:25px;
+	}
 }
-
-.button.is-checked {
-  color: white;
-  text-shadow: 0 -1px hsla(0, 0%, 0%, 0.8);
-}
-
-.button:active {
-  box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
-}
-
-/* ---- button-group ---- */
-
-.button-group:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-
-.button-group .button {
-  float: left;
-  border-radius: 0;
-  margin-left: 0;
-  margin-right: 1px;
-}
-
-.button-group .button:first-child { border-radius: 0.5em 0 0 0.5em; }
-.button-group .button:last-child { border-radius: 0 0.5em 0.5em 0; }
-
-/* ---- isotope ---- */
-
-.grid {
-  background: #EEE;
-  max-width: 1200px;
-}
-
-/* clear fix */
-.grid:after {
-  content: '';
-  display: block;
-  clear: both;
-}
-
-/* ui group */
-
-.ui-group {
-  display: inline-block;
-}
-
-.ui-group h3 {
-  display: inline-block;
-  vertical-align: top;
-  line-height: 32px;
-  margin-right: 0.2em;
-  font-size: 16px;
-}
-
-.ui-group .button-group {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-/* color-shape */
-
-.color-shape {
-  width: 70px;
-  height: 70px;
-  margin: 5px;
-  float: left;
-}
- 
-.color-shape.round {
-  border-radius: 35px;
-}
- 
-.color-shape.big.round {
-  border-radius: 75px;
-}
- 
-.color-shape.red { background: red; }
-.color-shape.blue { background: blue; }
-.color-shape.yellow { background: yellow; }
- 
-.color-shape.wide, .color-shape.big { width: 150px; }
-.color-shape.tall, .color-shape.big { height: 150px; }
