--- a/wp-content/themes/filter-demo/css/scss/_global.scss
+++ b/wp-content/themes/filter-demo/css/scss/_global.scss
@@ -1,6 +1,5 @@
 body {
 	font-family: "helvetica";
-	
 }
 
 
@@ -43,7 +42,7 @@ body {
 
 
 
-#box {
+.flux-post {
 	margin-bottom:25px;
 	line-height: 22px;
 	img {
