--- a/wp-content/plugins/fluxtabs/css/style.scss
+++ b/wp-content/plugins/fluxtabs/css/style.scss
@@ -1,16 +1,3 @@
-body {
-	font-family: "helvetica";
-}
-
-
-.container {
-	width:100%;
-	max-width:700px;
-	margin:50px auto;
-	padding:0 4px;
-}
-
-
 .button_wrapper {
 	text-align: left;
 	margin-bottom: 35px;
@@ -20,6 +7,7 @@ body {
 		border:none;
 		text-transform: uppercase;
 		font-weight: bold;
+		font-family: helvetica;
 		font-size: 14px;
 		padding:8px 20px;
 		margin-bottom: 4px;
@@ -43,21 +31,3 @@ body {
 
 
 
-.flux-post {
-	margin-bottom:25px;
-	line-height: 22px;
-	img {
-		display: block;
-		margin-top:20px;
-		margin-bottom:30px;
-		max-width:100%;
-		height:auto;
-	}
-	h2 {
-		margin-bottom:9px;
-		font-size:20px;
-	}
-	p {
-		margin-bottom:25px;
-	}
-}
