--- a/wp-content/themes/starter-theme/css/scss/_reset.scss
+++ b/wp-content/themes/starter-theme/css/scss/_reset.scss
@@ -19,6 +19,10 @@ text-shadow: 1px 1px 1px rgba(0,0,0,0.05);
 line-height: 1;
 }
 
+body .gform_wrapper .gform_validation_container {
+	display: none;
+}
+
 
 body img.gform_ajax_spinner {
     display: none!important;
@@ -27,4 +31,9 @@ body img.gform_ajax_spinner {
 
 header, section, nav, footer {
 	display: block;
+}
+
+input, textarea {
+	-webkit-appearance: none;
+	border-radius: 0;
 }
