--- a/wp-content/plugins/fluxtabs/css/style.scss
+++ b/wp-content/plugins/fluxtabs/css/style.scss
@@ -2,26 +2,27 @@
 	text-align: left;
 	margin-bottom: 35px;
 	button {
-		background:#000;
-		color:#fff;
+		// background:#000;
+		// color:#fff;
 		border:none;
-		text-transform: uppercase;
-		font-weight: bold;
-		font-family: helvetica;
-		font-size: 14px;
+		// text-transform: uppercase;
+		// font-weight: bold;
+		// font-family: helvetica;
+		// font-size: 14px;
 		padding:8px 20px;
 		margin-bottom: 4px;
 		transition: all .2s ease-in-out;
 		cursor: pointer;
 		margin-right:5px;
 		&:hover {
-			background:#ed1d24;
+			// background:#ed1d24;
+			// color: red;
 		}
 	}
 	button#clearall {
-		background:grey;
+		background:#7d7d7d;
 		&:hover {
-			background:#ed1d24;
+			background:#7c7c7c;
 		}
 	}
 	button.active {
